# kaiwu

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: test.yml
commands/: kaiwu-doctor.md  kaiwu-lessons.md  kaiwu-plan.md  kaiwu-record.md  kaiwu-scene.md  kaiwu-stats.md
hooks/: hooks.json
hooks/scripts/: on_session_start.py  on_stop.py  post_tool_error_detect.py
kaiwu/: __init__.py  cli.py  config.py  memory.py  notify.py  planner.py  privacy.py  recorder.py  server.py  session.py  wizard.py
kaiwu/storage/: __init__.py  error_kb.py  experience.py
skills/kaiwu-diagnosis/: SKILL.md
skills/kaiwu-experience/: SKILL.md
skills/kaiwu-workflow/: SKILL.md
tests/: benchmark_e2e.py  benchmark_hard10.py  test_config.py  test_error_kb.py  test_experience.py  test_llm_client.py  test_privacy.py  test_server.py  test_session.py  test_task_classifier.py
